8312596: Potential null pointer access in Compile::TracePhase::~TracePhase after JDK-8311976

Signed-off-by: Ashutosh Mehra <asmehra@redhat.com>