src/hotspot/share/opto/compile.cpp
@@ -4332,10 +4332,13 @@ void Compile::record_failure(const char* reason) {
 
 Compile::TracePhase::TracePhase(const char* name, elapsedTimer* accumulator)
   : TraceTime(name, accumulator, CITime, CITimeVerbose),
-    _compile(nullptr), _log(nullptr), _phase_name(name), _dolog(CITimeVerbose)
+    _compile(Compile::current()),
+    _log(nullptr),
+    _phase_name(name),
+    _dolog(CITimeVerbose)
 {
+  assert(_compile != nullptr, "sanity check");
   if (_dolog) {
-    _compile = Compile::current();
     _log = _compile->log();
   }
   if (_log != nullptr) {
@@ -4353,7 +4356,7 @@ Compile::TracePhase::~TracePhase() {
   }
 
   if (VerifyIdealNodeCount) {
-    Compile::current()->print_missing_nodes();
+    _compile->print_missing_nodes();
   }
 #endif
 
